# Buddy_allocator

./: README.md
buddy/: CMakeLists.txt  buddy_alloc.cpp  buddy_alloc.h  main.cpp  myfile
buddy/lib/: CMakeLists.txt  d_list.cpp  d_list.h
